--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
         </nav>
     </header>
 
-    <div class="container hero">
-        <img src="logo.png" alt="Design Hub Logo">
-        <h1>Design Hub</h1>
-        <p style="color:#94a3b8; font-size: 1.2rem;">CAD Designs • Engineering Projects • Code</p>
-    </div>
+<div class="hero">
+    <h1>Design Hub</h1>
+    <p>CAD Designs • Engineering Projects • Code</p>
+</div>
 
 </body>
 </html>
