--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Skyler Fellenz | Home</title>
+    <title>Skyler Fellenz | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,9 @@
     </header>
 
     <div class="hero">
-        <p>CAD Designs • Engineering Projects • Code</p>
+        <div class="overlay-bar">
+            <p>CAD Designs • Engineering Projects • Code</p>
+        </div>
     </div>
 </body>
 </html>
