--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Skyler Fellenz | Portfolio</title>
+    <title>Skyler Fellenz | Engineer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="brand-name"><a href="index.html">Skyler Fellenz</a></div>
+        <div class="brand-name"><a href="index.html">SF</a></div>
         <nav>
             <ul>
                 <li><a href="coding.html">Coding &#9662;</a>
@@ -25,9 +25,14 @@
     </header>
 
     <div class="hero">
-        <div class="overlay-bar">
-            <p>CAD Designs • Engineering Projects • Code</p>
+        <div class="hero-text">
+            <h1>SKYLER<br>FELLENZ</h1>
+            <span class="design-hub">DESIGN HUB</span>
+            <div class="sub-nav">
+                CAD Designs • Engineering Projects • Code
+            </div>
         </div>
-    </div>
+        
+        </div>
 </body>
 </html>
