--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Skyler Fellenz | Engineer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skyler Fellenz | Design Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-        <div class="brand-name"><a href="index.html">SF</a></div>
+        <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul>
-                <li><a href="coding.html">Coding &#9662;</a>
-                    <div class="dropdown-content">
-                        <a href="coding.html#matlab">MATLAB</a>
-                        <a href="coding.html#python">Python</a>
-                        <a href="coding.html#java">Java</a>
-                    </div>
-                </li>
+                <li><a href="coding.html">Coding</a></li>
                 <li><a href="eml2023.html">EML2023</a></li>
                 <li><a href="grip.html">GRiP</a></li>
                 <li><a href="iam3d.html">IAM3D</a></li>
@@ -24,15 +20,13 @@
         </nav>
     </header>
 
-    <div class="hero">
-        <div class="hero-text">
+    <section class="hero">
+        <div class="hero-content">
             <h1>SKYLER<br>FELLENZ</h1>
-            <span class="design-hub">DESIGN HUB</span>
-            <div class="sub-nav">
-                CAD Designs • Engineering Projects • Code
-            </div>
+            <h2>DESIGN HUB</h2>
+            <p>Specializing in CAD design, software development, and engineering innovation.</p>
         </div>
-        
-        </div>
+    </section>
+
 </body>
 </html>
