--- a/index.html
+++ b/index.html
@@ -33,28 +33,22 @@
         <div class="hero-content">
             <h1>SKYLER FELLENZ</h1>
             <h2>DESIGN HUB</h2>
-            <p>Engineering • CAD • Software Development</p>
+            <p>Mechanical Engineering • CAD • Software Development</p>
         </div>
     </section>
 
     <section id="about" class="content-section">
         <h2>About Me</h2>
-        <p>I am a detail-oriented designer and engineer focused on the intersection of CAD and functional code.</p>
+        <div class="about-text">
+            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions. I’m especially drawn to projects that require creativity under constraints and collaboration across disciplines.</p>
+            <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
+            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+        </div>
     </section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Experience in SolidWorks, Python, and Mechanical Design. <br> <a href="resume.pdf" class="btn">Download Full CV</a></p>
+        <p>Experience in SolidWorks, Python, and Mechanical Design.</p>
+        <a href="resume.pdf" class="btn" download>Download Full CV</a>
     </section>
-
-    <section id="contact" class="content-section">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Skyler Fellenz</p>
-    </footer>
-
-</body>
-</html>
