--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyler Fellenz | Design Hub</title>
+    <title>Skyler Fellenz | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header>
-        <div class="brand-name"><a href="#">SKYLER FELLENZ</a></div>
+        <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
                 <li class="dropdown">
@@ -30,25 +29,29 @@
     </header>
 
     <section class="hero">
-        <div class="hero-content">
-            <h1>SKYLER FELLENZ</h1>
-            <h2>DESIGN HUB</h2>
-            <p>Mechanical Engineering • CAD • Software Development</p>
-        </div>
+        <h1>SKYLER FELLENZ</h1>
+        <h2>DESIGN HUB</h2>
+        <p>Mechanical Engineering • CAD • Software Development</p>
     </section>
 
     <section id="about" class="content-section">
         <h2>About Me</h2>
-        <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions. I’m especially drawn to projects that require creativity under constraints and collaboration across disciplines.</p>
-            <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
-            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
-        </div>
+        <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+        <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
+        <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
     </section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Experience in SolidWorks, Python, and Mechanical Design.</p>
-        <a href="resume.pdf" class="btn" download>Download Full CV</a>
+        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
+        <a href="resume.pdf" class="btn" download>Download Resume (PDF)</a>
     </section>
+
+    <section id="contact" class="content-section">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:skyfellenzjobs@gmail.com" style="color:var(--sky-blue);">skyfellenzjobs@gmail.com</a></p>
+    </section>
+
+    <footer>&copy; 2024 Skyler Fellenz</footer>
+</body>
+</html>
