--- a/eml2023.html
+++ b/eml2023.html
@@ -2,49 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EML2023 Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
-        <div class="brand-name"><a href="index.html">Skyler Fellenz</a></div>
+        <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
-            <ul>
-                <li><a href="coding.html">Coding &#9662;</a>
-                    <div class="dropdown-content">
-                        <a href="coding.html#matlab">MATLAB</a>
-                        <a href="coding.html#python">Python</a>
-                        <a href="coding.html#java">Java</a>
-                    </div>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Projects ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="eml2023.html">EML2023</a></li>
+                        <li><a href="grip.html">GRiP</a></li>
+                        <li><a href="iam3d.html">IAM3D</a></li>
+                    </ul>
                 </li>
-                <li><a href="eml2023.html" style="color:#38bdf8;">EML2023</a></li>
-                <li><a href="grip.html">GRiP</a></li>
-                <li><a href="iam3d.html">IAM3D</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="container">
-        <h1>EML2023 Projects</h1>
-        <p>Mechanical Design and Assembly projects.</p>
+        <h1>EML2023: Mechanical Design</h1>
+        <p>Computer-Aided Design and Assembly Projects.</p>
 
         <div class="file-grid">
-            
             <div class="file-card">
                 <h3>Final Part Drawing</h3>
-                <p>PDF export of the final mechanism.</p>
+                <p>Detailed technical drawing with dimensions.</p>
                 <a href="final-drawing.pdf" class="btn-download" target="_blank">View PDF</a>
             </div>
 
             <div class="file-card">
                 <h3>Assembly STEP File</h3>
-                <p>3D CAD model for manufacturing.</p>
-                <a href="assembly.step" class="btn-download">Download STEP</a>
+                <p>Complete 3D assembly for mechanical analysis.</p>
+                <a href="assembly.step" class="btn-download" download>Download STEP</a>
             </div>
-
         </div>
     </div>
-
 </body>
 </html>
