--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyler Fellenz | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
@@ -28,26 +29,24 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" style="padding-top: 100px;">
         <h1>SKYLER FELLENZ</h1>
         <h2>DESIGN HUB</h2>
         <p>Mechanical Engineering • CAD • Software Development</p>
     </section>
 
-    <section id="about" class="content-section">
+    <section id="about" class="content-section" style="padding-top: 120px;">
         <h2>About Me</h2>
-        <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-        <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
-        <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+        <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world...</p>
+        <p>I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
     </section>
 
-    <section id="resume" class="content-section">
+    <section id="resume" class="content-section" style="padding-top: 120px;">
         <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
         <a href="resume.pdf" class="btn" download>Download Resume (PDF)</a>
     </section>
 
-    <section id="contact" class="content-section">
+    <section id="contact" class="content-section" style="padding-top: 120px; padding-bottom: 100px;">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:skyfellenzjobs@gmail.com" style="color:var(--sky-blue);">skyfellenzjobs@gmail.com</a></p>
     </section>
