--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyler Fellenz | Portfolio</title>
+    <title>Skyler Fellenz | Design Hub</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -29,28 +29,36 @@
         </nav>
     </header>
 
-    <section class="hero" style="padding-top: 100px;">
-        <h1>SKYLER FELLENZ</h1>
-        <h2>DESIGN HUB</h2>
-        <p>Mechanical Engineering • CAD • Software Development</p>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>SKYLER FELLENZ</h1>
+            <h2>DESIGN HUB</h2>
+            <p>Mechanical Engineering • CAD • Software Development</p>
+        </div>
     </section>
 
-    <section id="about" class="content-section" style="padding-top: 120px;">
+    <section id="about" class="content-section">
         <h2>About Me</h2>
-        <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world...</p>
-        <p>I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+        <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+        <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions. I’m especially drawn to projects that require creativity under constraints and collaboration across disciplines.</p>
+        <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
+        <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
     </section>
 
-    <section id="resume" class="content-section" style="padding-top: 120px;">
+    <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <a href="resume.pdf" class="btn" download>Download Resume (PDF)</a>
+        <p>Experience in SolidWorks, Python, and Mechanical Design. <br> 
+        <a href="resume.pdf" class="btn" download>Download Full CV</a></p>
     </section>
 
-    <section id="contact" class="content-section" style="padding-top: 120px; padding-bottom: 100px;">
+    <section id="contact" class="content-section">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:skyfellenzjobs@gmail.com" style="color:var(--sky-blue);">skyfellenzjobs@gmail.com</a></p>
+        <p>Email: <a href="mailto:skyfellenzjobs@gmail.com">skyfellenzjobs@gmail.com</a></p>
     </section>
 
-    <footer>&copy; 2024 Skyler Fellenz</footer>
+    <footer>
+        <p>&copy; 2024 Skyler Fellenz</p>
+    </footer>
+
 </body>
 </html>
