--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="resume" class="content-section">
         <h2>Resume</h2>
         <p>Experience in SolidWorks, Python, and Mechanical Design. <br> 
-        <a href="resume.pdf" class="btn" download>Download Full CV</a></p>
+        <a href="Skyler_Fellenz_Mechanical_Engineering_Resume.pdf" class="btn" download>Download Full CV</a></p>
     </section>
 
     <section id="contact" class="content-section">
