--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Experience in SolidWorks, Python, and Mechanical Design. <br> 
+        <p>Experience in SolidWorks, MATLAB, and Mechanical Design. <br> 
         <a href="Skyler_Fellenz_Mechanical_Engineering_Resume.pdf" class="btn" download>Download Full CV</a></p>
     </section>
 
