--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
     </section>
 
     <section id="contact" class="content-section">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:skyfellenzjobs@gmail.com">skyfellenzjobs@gmail.com</a></p>
-    </section>
+    <h2>Contact</h2>
+    <div class="contact-card">
+        <p>Interested in collaborating or have a question about my projects? Reach out via email:</p>
+        <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2024 Skyler Fellenz</p>
