--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     </section>
 
     <section id="contact" class="content-section">
-    <h2>Contact</h2>
-    <div class="contact-card">
-        <p>Interested in collaborating or have a question about my projects? Reach out via email:</p>
-        <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
-    </div>
-</section>
+        <h2>Contact</h2>
+        <div class="contact-box">
+            <p>Email me at:</p>
+            <a href="mailto:skyfellenzjobs@gmail.com" class="highlight-link">skyfellenzjobs@gmail.com</a>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2026 Skyler Fellenz</p>
