--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
         </div>
     </section>
 
-    <section id="about" class="content-section">
-        <h2>About Me</h2>
+<section id="about" class="content-section">
+    <h2>About Me</h2>
+    <div class="about-text">
         <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-        <p>
-            I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions. I’m especially drawn to projects that require creativity under constraints and collaboration across disciplines.</p>
-        <p>
-            Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
-        <p>
-            I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
-    </section>
+        <br>
+        <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions. I’m especially drawn to projects that require creativity under constraints and collaboration across disciplines.</p>
+        <br>
+        <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
+        <br>
+        <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+    </div>
+</section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
