Update and rename GRiP.html to grip.html

--- a/grip.html
+++ b/grip.html
@@ -17,10 +17,11 @@
         <div class="file-grid">
             <div class="file-card">
                 <h3>Prosthetic Design</h3>
-                <p>3D Print files for assistive devices.</p>
+                <p>3D Print files and design iterations for assistive devices.</p>
                 <a href="#" class="btn-download">Coming Soon</a>
             </div>
         </div>
     </div>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
