--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="resume" class="content-section">
         <h2>Resume</h2>
         <p>Experience in SolidWorks, Python, and Mechanical Design.</p>
-        <a href="resume.pdf" class="btn" download style="margin-top:20px;">Download Full CV</a>
+        <a href="resume.pdf" class="btn" download style="margin-top:20px;">Download Full Resume</a>
     </section>
 
     <section id="contact" class="content-section">
