--- a/index.html
+++ b/index.html
@@ -46,4 +46,27 @@
             
             <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. Whether I’m working on a design team, refining a concept after failure, or learning in a new environment, I’m motivated by curiosity and the challenge of continuous improvement.</p>
             
-            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push
+            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+        </div>
+    </section>
+
+    <section id="resume" class="content-section">
+        <h2>Resume</h2>
+        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
+        <a href="resume.pdf" class="btn" download>Download Full Resume</a>
+    </section>
+
+    <section id="contact" class="content-section">
+        <h2>Contact</h2>
+        <div class="contact-box">
+            <p>Looking to discuss a project or potential opportunity? Reach out via email:</p>
+            <a href="mailto:skyfellenzjobs@gmail.com">skyfellenzjobs@gmail.com</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 Skyler Fellenz</p>
+    </footer>
+
+</body>
+</html>
