--- a/eml2023.html
+++ b/eml2023.html
@@ -3,58 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EML2023 | Mechanical Design</title>
+    <title>EML2023 | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li class="dropdown">
-                    <a href="#">Projects ▼</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
-                        <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
     </header>
 
     <div class="container">
         <h1>EML 2023: Design & Manufacturing</h1>
-        
-        <h2 style="margin-top:40px; color:var(--sky-blue); border-bottom: 1px solid #334155;">Assemblies</h2>
+        <p>Mechanical design projects focused on CAD and manufacturing processes.</p>
+
+        <h2 class="category-title">Assemblies</h2>
         <div class="file-grid">
             <div class="file-card">
-                <h3>Main Mechanism</h3>
-                <p>Full system assembly showing all moving components and constraints.</p>
-                <a href="cad_files/assemblies/main_assembly.step" class="btn-download" download>Download STEP</a>
+                <h3>Main Assembly</h3>
+                <p>Full system constraints and motion analysis.</p>
+                <a href="cad_files/eml2023/assembly.step" class="btn-download" download>Download STEP</a>
             </div>
         </div>
 
-        <h2 style="margin-top:40px; color:var(--sky-blue); border-bottom: 1px solid #334155;">Technical Drawings</h2>
+        <h2 class="category-title">Drawings</h2>
         <div class="file-grid">
             <div class="file-card">
-                <h3>Exploded View</h3>
-                <p>BOM and balloon callouts for the final assembly.</p>
-                <a href="cad_files/drawings/exploded_view.pdf" class="btn-download" target="_blank">View PDF</a>
+                <h3>Technical Drawing</h3>
+                <p>Dimensioned PDF with tolerances and BOM.</p>
+                <a href="cad_files/eml2023/drawing.pdf" class="btn-download" target="_blank">View PDF</a>
             </div>
         </div>
 
-        <h2 style="margin-top:40px; color:var(--sky-blue); border-bottom: 1px solid #334155;">Individual Parts</h2>
+        <h2 class="category-title">Parts</h2>
         <div class="file-grid">
             <div class="file-card">
-                <h3>Machined Base</h3>
-                <p>Primary structural component designed for CNC milling.</p>
-                <a href="cad_files/parts/base_plate.sldprt" class="btn-download" download>Download Part</a>
+                <h3>Mounting Bracket</h3>
+                <p>Individual component designed for CNC milling.</p>
+                <a href="cad_files/eml2023/part.sldprt" class="btn-download" download>Download Part</a>
             </div>
         </div>
     </div>
-
-    <footer>&copy; 2024 Skyler Fellenz</footer>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
