--- a/coding.html
+++ b/coding.html
@@ -3,58 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Repository | MATLAB</title>
+    <title>Coding Projects | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li class="dropdown">
-                    <a href="#">Projects ▼</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
-                        <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
-                    </ul>
-                </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
     </header>
 
     <div class="container">
-        <h1 style="color: var(--sky-blue); margin-bottom: 10px;">Coding Repository</h1>
-        <p style="color: var(--text-dim); margin-bottom: 40px;">Technical computing and simulations developed in MATLAB.</p>
-        
-        <h2>MATLAB Projects</h2>
+        <h1>Coding & Software</h1>
         <div class="file-grid">
             <div class="file-card">
-                <h3>Vibration Analysis</h3>
-                <p>Computational script designed to analyze damping ratios, natural frequencies, and system responses for mechanical oscillators.</p>
-                <a href="vibrations.m" class="btn-download" download>Download .m File</a>
+                <h3>MATLAB Analysis</h3>
+                <p>Numerical methods and data visualization script.</p>
+                <a href="cad_files/coding/analysis.m" class="btn-download" download>View Code</a>
             </div>
-
             <div class="file-card">
-                <h3>Numerical Methods</h3>
-                <p>Implementation of ODE solvers and root-finding algorithms for engineering applications.</p>
-                <a href="numerical_methods.m" class="btn-download" download>Download .m File</a>
-            </div>
-
-            <div class="file-card">
-                <h3>Data Visualization</h3>
-                <p>Custom plotting scripts for processing sensor data and generating publication-quality figures.</p>
-                <a href="viz_tool.m" class="btn-download" download>Download .m File</a>
+                <h3>Python Automation</h3>
+                <p>Script for automating CAD file organization.</p>
+                <a href="https://github.com/yourusername" class="btn-download" target="_blank">GitHub Repo</a>
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Skyler Fellenz</p>
-    </footer>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
