--- a/grip.html
+++ b/grip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRiP Projects</title>
+    <title>GRiP Projects | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,14 +11,32 @@
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
     </header>
+
     <div class="container">
-        <h1>GRiP Projects</h1>
-        <p>Generational Relief in Prosthetics research and design.</p>
+        <h1>GRiP: Generational Relief in Prosthetics</h1>
+        <p>Research and design of assistive devices aimed at improving quality of life through mechanical innovation.</p>
+
+        <h2 class="category-title">Prosthetic Design</h2>
         <div class="file-grid">
             <div class="file-card">
-                <h3>Prosthetic Design</h3>
-                <p>3D Print files and design iterations for assistive devices.</p>
-                <a href="#" class="btn-download">Coming Soon</a>
+                <h3>Hand Mechanism</h3>
+                <p>3D printable prosthetic hand assembly with adaptive grip logic.</p>
+                <a href="cad_files/grip/hand_assembly.step" class="btn-download" download>Download STEP</a>
+            </div>
+
+            <div class="file-card">
+                <h3>Socket Interface</h3>
+                <p>Custom-fit socket design focusing on ergonomic load distribution.</p>
+                <a href="cad_files/grip/socket.stl" class="btn-download" download>Download STL</a>
+            </div>
+        </div>
+
+        <h2 class="category-title">Documentation</h2>
+        <div class="file-grid">
+            <div class="file-card">
+                <h3>User Testing Report</h3>
+                <p>Data analysis of grip strength and comfort during clinical trials.</p>
+                <a href="cad_files/grip/testing_report.pdf" class="btn-download" target="_blank">View Report</a>
             </div>
         </div>
     </div>
