--- a/iam3d.html
+++ b/iam3d.html
@@ -3,44 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IAM3D | Innovative Additive Manufacturing</title>
+    <title>IAM3D | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li class="dropdown">
-                    <a href="#">Projects ▼</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
-                        <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
     </header>
 
     <div class="container">
         <h1>IAM3D: Additive Manufacturing</h1>
         <p>Exploring complex geometries and rapid prototyping through 3D printing technologies.</p>
 
-        <h2 style="margin-top:40px; color:var(--sky-blue); border-bottom: 1px solid #334155;">3D Print Files (STL/3MF)</h2>
+        <h2 class="category-title">Printable Parts</h2>
         <div class="file-grid">
             <div class="file-card">
                 <h3>Functional Prototype</h3>
-                <p>Optimized for FDM printing with minimal support structures.</p>
-                <a href="cad_files/iam3d/prototype.stl" class="btn-download" download>Download .STL</a>
+                <p>Optimized for FDM printing with minimal support requirements.</p>
+                <a href="cad_files/iam3d/prototype.stl" class="btn-download" download>Download STL</a>
             </div>
-            
+
             <div class="file-card">
-                <h3>Lattice Structure Study</h3>
-                <p>Experimentation with infill patterns for weight reduction and strength.</p>
-                <a href="cad_files/iam3d/lattice.3mf" class="btn-download" download>Download .3MF</a>
+                <h3>Lattice Structure</h3>
+                <p>Lightweight infill geometry for high strength-to-weight applications.</p>
+                <a href="cad_files/iam3d/lattice.3mf" class="btn-download" download>Download 3MF</a>
             </div>
         </div>
 
-        <h2 style="margin-top:40px; color:var(--sky-blue); border-bottom:
+        <h2 class="category-title">Technical Reports</h2>
+        <div class="file-grid">
+            <div class="file-card">
+                <h3>Orientation Analysis</h3>
+                <p>Study on how Z-height and layer orientation affect part strength.</p>
+                <a href="cad_files/iam3d/orientation_study.pdf" class="btn-download" target="_blank">View PDF</a>
+            </div>
+        </div>
+    </div>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+</body>
+</html>
