--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyler Fellenz | Portfolio</title>
+    <title>Skyler Fellenz | Design Hub</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
@@ -30,18 +30,18 @@
     </header>
 
     <section class="hero">
-        <h1>SKYLER FELLENZ</h1>
-        <h2>DESIGN HUB</h2>
-        <p>Mechanical Engineering • CAD • Software Development</p>
+        <div class="hero-container">
+            <h1>SKYLER FELLENZ</h1>
+            <h2>DESIGN HUB</h2>
+            <p>Mechanical Engineering • CAD • Software Development</p>
+        </div>
     </section>
 
     <section id="about" class="content-section">
         <h2>About Me</h2>
         <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
-            <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. I’m motivated by curiosity and the challenge of continuous improvement.</p>
-            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world...</p>
+            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact...</p>
         </div>
     </section>
 
