--- a/index.html
+++ b/index.html
@@ -40,25 +40,23 @@
     <section id="about" class="content-section">
         <h2>About Me</h2>
         <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world...</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact...</p>
+            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
+            <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. I’m motivated by curiosity and the challenge of continuous improvement.</p>
+            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
         </div>
     </section>
 
     <section id="resume" class="content-section">
-        <div class="file-card">
-            <h2>Resume</h2>
-            <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
-            <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
-        </div>
+        <h2>Resume</h2>
+        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
+        <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
     </section>
 
     <section id="contact" class="content-section">
-        <div class="file-card">
-            <h2>Contact</h2>
-            <p>Looking to discuss a project or potential opportunity? Reach out via email:</p>
-            <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
-        </div>
+        <h2>Contact</h2>
+        <p>Looking to discuss a project or potential opportunity? Reach out via email:</p>
+        <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
     </section>
 
     <footer>
