--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
+        <p>Technical Skills: SolidWorks, MATLAB, and Mechanical Design.</p>
         <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
     </section>
 
