--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
@@ -40,16 +39,14 @@
     <section id="about" class="content-section">
         <h2>About Me</h2>
         <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
-            <p>Beyond the technical side, I value teamwork, adaptability, and learning how people think. I’m motivated by curiosity and the challenge of continuous improvement.</p>
-            <p>I’m currently exploring opportunities in engineering design, research, and applied problem-solving—and I’m always excited to take on projects that push me to grow.</p>
+            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world.</p>
+            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. I focus on translating theory into practical, well-engineered solutions.</p>
         </div>
     </section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, and Mechanical Design.</p>
+        <p>Technical Skills: SolidWorks, MATLAB, Python, Mechanical Design.</p>
         <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
     </section>
 
@@ -59,9 +56,6 @@
         <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
     </section>
 
-    <footer>
-        <p>&copy; 2026 Skyler Fellenz</p>
-    </footer>
-
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
