--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -39,8 +39,8 @@
     <section id="about" class="content-section">
         <h2>About Me</h2>
         <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world.</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. I focus on translating theory into practical, well-engineered solutions.</p>
+            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
+            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
         </div>
     </section>
 
