--- a/coding.html
+++ b/coding.html
@@ -3,27 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Projects | Skyler Fellenz</title>
+    <title>Coding | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
+        <nav>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Projects ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="eml2023.html">EML2023</a></li>
+                        <li><a href="grip.html">GRiP</a></li>
+                        <li><a href="iam3d.html">IAM3D</a></li>
+                    </ul>
+                </li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
         <h1>Coding & Software</h1>
+        <p>Software solutions and scripts developed for engineering analysis and automation.</p>
+        
         <div class="file-grid">
             <div class="file-card">
-                <h3>MATLAB Analysis</h3>
-                <p>Numerical methods and data visualization script.</p>
-                <a href="cad_files/coding/analysis.m" class="btn-download" download>View Code</a>
+                <h3>MATLAB Data Analysis</h3>
+                <p>Numerical simulation and visualization script for mechanical systems.</p>
+                <a href="https://github.com/skylerfellenz" class="btn-download" target="_blank">View on GitHub</a>
             </div>
+
             <div class="file-card">
-                <h3>Python Automation</h3>
-                <p>Script for automating CAD file organization.</p>
-                <a href="https://github.com/yourusername" class="btn-download" target="_blank">GitHub Repo</a>
+                <h3>Python Automation Script</h3>
+                <p>Custom script designed to streamline CAD file management and organization.</p>
+                <a href="https://github.com/skylerfellenz" class="btn-download" target="_blank">View Repository</a>
             </div>
         </div>
     </div>
