--- a/grip.html
+++ b/grip.html
@@ -3,40 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRiP Projects | Skyler Fellenz</title>
+    <title>GRiP | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
+        <nav>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Projects ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="eml2023.html">EML2023</a></li>
+                        <li><a href="grip.html">GRiP</a></li>
+                        <li><a href="iam3d.html">IAM3D</a></li>
+                    </ul>
+                </li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
-        <h1>GRiP: Generational Relief in Prosthetics</h1>
-        <p>Research and design of assistive devices aimed at improving quality of life through mechanical innovation.</p>
-
-        <h2 class="category-title">Prosthetic Design</h2>
+        <h1>GRiP Projects</h1>
+        <p>Generational Relief in Prosthetics: Engineering assistive devices for real-world impact.</p>
+        
         <div class="file-grid">
             <div class="file-card">
-                <h3>Hand Mechanism</h3>
-                <p>3D printable prosthetic hand assembly with adaptive grip logic.</p>
+                <h3>Adaptive Hand Assembly</h3>
+                <p>Fully constrained 3D model of an assistive prosthetic hand mechanism.</p>
                 <a href="cad_files/grip/hand_assembly.step" class="btn-download" download>Download STEP</a>
             </div>
 
             <div class="file-card">
-                <h3>Socket Interface</h3>
-                <p>Custom-fit socket design focusing on ergonomic load distribution.</p>
-                <a href="cad_files/grip/socket.stl" class="btn-download" download>Download STL</a>
-            </div>
-        </div>
-
-        <h2 class="category-title">Documentation</h2>
-        <div class="file-grid">
-            <div class="file-card">
-                <h3>User Testing Report</h3>
-                <p>Data analysis of grip strength and comfort during clinical trials.</p>
-                <a href="cad_files/grip/testing_report.pdf" class="btn-download" target="_blank">View Report</a>
+                <h3>Technical Design Documentation</h3>
+                <p>Comprehensive report covering design iterations and user testing feedback.</p>
+                <a href="cad_files/grip/design_report.pdf" class="btn-download" target="_blank">View PDF Report</a>
             </div>
         </div>
     </div>
