--- a/iam3d.html
+++ b/iam3d.html
@@ -9,34 +9,39 @@
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav><ul class="nav-links"><li class="dropdown"><a href="#">Projects ▼</a><ul class="dropdown-menu"><li><a href="coding.html">Coding</a></li><li><a href="eml2023.html">EML2023</a></li><li><a href="grip.html">GRiP</a></li><li><a href="iam3d.html">IAM3D</a></li></ul></li></ul></nav>
+        <nav>
+            <ul class="nav-links">
+                <li class="dropdown">
+                    <a href="#">Projects ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="eml2023.html">EML2023</a></li>
+                        <li><a href="grip.html">GRiP</a></li>
+                        <li><a href="iam3d.html">IAM3D</a></li>
+                    </ul>
+                </li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
         <h1>IAM3D: Additive Manufacturing</h1>
-        <p>Exploring complex geometries and rapid prototyping through 3D printing technologies.</p>
-
-        <h2 class="category-title">Printable Parts</h2>
+        <p>Research and development focused on 3D printing optimization and complex geometries.</p>
+        
         <div class="file-grid">
             <div class="file-card">
-                <h3>Functional Prototype</h3>
-                <p>Optimized for FDM printing with minimal support requirements.</p>
-                <a href="cad_files/iam3d/prototype.stl" class="btn-download" download>Download STL</a>
+                <h3>Optimized Lattice Structure</h3>
+                <p>Lightweight infill design optimized for high-strength SLS or FDM printing.</p>
+                <a href="cad_files/iam3d/lattice_part.stl" class="btn-download" download>Download STL</a>
             </div>
 
             <div class="file-card">
-                <h3>Lattice Structure</h3>
-                <p>Lightweight infill geometry for high strength-to-weight applications.</p>
-                <a href="cad_files/iam3d/lattice.3mf" class="btn-download" download>Download 3MF</a>
-            </div>
-        </div>
-
-        <h2 class="category-title">Technical Reports</h2>
-        <div class="file-grid">
-            <div class="file-card">
-                <h3>Orientation Analysis</h3>
-                <p>Study on how Z-height and layer orientation affect part strength.</p>
-                <a href="cad_files/iam3d/orientation_study.pdf" class="btn-download" target="_blank">View PDF</a>
+                <h3>Print Orientation Strength Study</h3>
+                <p>Formal analysis of mechanical property variance based on print layer orientation.</p>
+                <a href="cad_files/iam3d/orientation_study.pdf" class="btn-download" target="_blank">View Analysis</a>
             </div>
         </div>
     </div>
